ci-cd/k8s/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-pick-ui
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: the-pick-ui
  template:
    metadata:
      labels:
        app: the-pick-ui
    spec:     # pod spec
      containers:
        - name: the-pick-ui
          image: gcr.io/PROJECT_ID/IMAGE:TAG # image we pushed
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                # if SIGTERM triggers a quick exit; keep serving traffic instead
                command: [ "sleep","60" ]
