ci-cd/k8s/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-pick-ui
  labels:
    app: the-pick-ui
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: the-pick-ui
  type: NodePort
  ports:
    - name: the-pick-ui
      protocol: TCP
      port: 80
      targetPort: 80
