ci-cd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: the-pick-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: thepickspace
    networking.gke.io/managed-certificates: thepickspace
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: the-pick-ui
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: the-pick-api
              servicePort: 81
